2001-08-22  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: make the graphs above each other to display
	more history.

	* load-graph.c: move the frame back behind the data. Do a crude
	hack to check if the data has any value and don't draw a line
	if not so. Gets rid of the line having to do with the fact that
	the data for time periods before the app started is zero. Bump
	the number of points up since we now have more space.

2001-08-22  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: add a new column to the disks showing used space.
	center justify each element in the disk list.

	* procman.c: add default colors

2001-08-22  Kevin Vandersloot <kfv101@psu.edu>

	Ability to save colors

	* procman.h: the config variables for the colors are now
	GdkColors

2001-08-22  Kevin Vandersloot <kfv101@psu.edu>

	Some UI to change the cpu/mem/swap colors. Still need to
	save to disk though

	* callbacks.c cb_[cpu,mem,swap]_color_changed: callback for
	the gnome color pickers, change the current colors

	* interface.c: add the color pickers. Add the swap used label
	as a caption to the now Memory / Swap graph.

	* load-graph.c: # of colors is now g->n + 2 ie one for each
	graphed item, one for background and one for frame. Draw frame
	after data so it is on top. calculate swap in get_memory

	* procman.c: new config variable for the swap color.

	* procman.h: move the LoadGraph structure here.

2001-08-21  Kevin Vandersloot <kfv101@psu.edu>

	Configurable colors for the graphs. Need to add UI in the
	settings dialog still.
	* procman.[c,h]: add config values for colors

	* callbacks.c: add a FIXME about using gnome_url_show

	* interface.c: update the calls to loag_graph_new
	passing the colors

	* load_graph.c: do the color dance

2001-08-21  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: change the "" to NULL in the UIINFOs as that
	seemed to cause problems

2001-08-20  Kevin Vandersloot <kfv101@psu.edu>
