@@ -1,3 +1,9 @@
+2001-08-23  Kevin Vandersloot <kfv101@psu.edu>
+
+	* load-graph.c: make the graph one pixel smaller than the frame
+	so it always shows up.
+	Initialize the data points to -1 and then don't display them.
+	
 2001-08-22  Kevin Vandersloot <kfv101@psu.edu>
 
 	* interface.c: make the graphs above each other to display
